cmake_minimum_required(VERSION 3.23)
project(BasicCPP)
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(smart_pointer)

add_subdirectory(basic_grammar/data_type)
add_subdirectory(basic_grammar/operator)
add_subdirectory(basic_grammar/process_control)
add_subdirectory(basic_grammar/array)
add_subdirectory(basic_grammar/function)
add_subdirectory(basic_grammar/pointer)
add_subdirectory(basic_grammar/struct)
add_subdirectory(basic_grammar/tongxunlu)